# unified-runtime

include/: ur_api.h  ur_print.hpp
scripts/: generate_code.py
scripts/core/: INTRO.rst
source/adapters/level_zero/: CMakeLists.txt  command_buffer.cpp  context.cpp  context.hpp  device.cpp  event.cpp  image.cpp  kernel.cpp  queue.cpp  queue.hpp
source/common/: CMakeLists.txt  ur_pool_manager.hpp
source/common/unified_malloc_framework/src/: memory_pool.c
source/loader/: ur_adapter_registry.hpp  ur_loader_location.hpp
source/loader/linux/: loader_location.cpp
source/loader/windows/: loader_location.cpp
test/adapters/level_zero/: CMakeLists.txt  async_alloc.cpp  enqueueAlloc.cpp
test/loader/: CMakeLists.txt
test/loader/adapter_registry/: CMakeLists.txt  fixtures.hpp  search_fail.cpp  search_success.cpp
